--- a/hw3_Genome_Classification.ipynb
+++ b/hw3_Genome_Classification.ipynb
@@ -265,7 +265,7 @@
         "  test_data = test_data.shuffle(buffer_size=128)\n",
         "\n",
         "  running_average = 0\n",
-        "  for i,(input, label) in enumerate(training_dataset):\n",
+        "  for i,(input, label) in enumerate(training_data):\n",
         "    training_loss = test_step(model, input, label, loss, optimizer)\n",
         "\n",
         "    #record how the loss evolves over one epoch\n",
