--- a/hw3_Genome_Classification.ipynb
+++ b/hw3_Genome_Classification.ipynb
@@ -3,7 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "Genome_classification.ipynb",
+      "name": "hw3_Genome_Classification.ipynb",
       "provenance": [],
       "collapsed_sections": []
     },
@@ -25,7 +25,7 @@
         "import tensorflow as tf\n",
         "import tensorflow_datasets as tfds"
       ],
-      "execution_count": 86,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -57,7 +57,7 @@
         "  onehot = tf.reshape(onehot, (-1,)) #e.g. [0001]\n",
         "  return onehot"
       ],
-      "execution_count": 87,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -77,7 +77,7 @@
       "source": [
         "test_data, training_data = tfds.load('genomics_ood', as_supervised = True, split = ['test[0:1000]', 'train[0:100000]'])\n"
       ],
-      "execution_count": 88,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -97,7 +97,7 @@
         "test_data = test_data.shuffle(buffer_size=128)\n",
         "test_data = test_data.prefetch(20)\n"
       ],
-      "execution_count": 89,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -132,7 +132,7 @@
         "    input = self.output_layer(input)\n",
         "    return input"
       ],
-      "execution_count": 90,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -161,14 +161,14 @@
         "    loss = loss_function(prediction, target)\n",
         "    #now we need the partial deriatives of the loss with respect to all the weights\n",
         "    #this is where gradienttape comes in handy and allows for easy computation of all the partial derivatives\n",
-        "    gradients = tape.gradient(loss, model.training_variables)\n",
+        "    gradients = tape.gradient(loss, model.trainable_variables)\n",
         "  #last we apply the computed weight updates\n",
         "  optimizer.apply_gradients(zip(gradients,model.trainable_variables))\n",
         "\n",
         "  #to be able to take record of the error produced by our network we return the loss\n",
         "  return loss"
       ],
-      "execution_count": 91,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -205,7 +205,7 @@
         "  test_accuracy = np.mean(test_accuracies)\n",
         "  return loss, test_accuracy\n"
       ],
-      "execution_count": 92,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -221,14 +221,14 @@
       "cell_type": "code",
       "metadata": {
         "id": "XqBYybUyuO5-",
-        "outputId": "9c5a963b-01e4-4f92-ea31-aa4be8a8c5c5",
+        "outputId": "652b960d-71f8-472a-dedc-e3bd93cf4690",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 247
+          "height": 376
         }
       },
       "source": [
-        "#tf.keras.backend.clear_session()\n",
+        "tf.keras.backend.clear_session()\n",
         "\n",
         "#Initialize model\n",
         "model = Model()\n",
@@ -266,7 +266,7 @@
         "\n",
         "  running_average = 0\n",
         "  for i,(input, label) in enumerate(training_data):\n",
-        "    training_loss = test_step(model, input, label, loss, optimizer)\n",
+        "    training_loss = train_step(model, input, label, loss, optimizer)\n",
         "\n",
         "    #record how the loss evolves over one epoch\n",
         "    running_average = running_average_factor * running_average  + (1 - running_average_factor) * train_loss \n",
@@ -280,17 +280,18 @@
         "  test_accuracies.append(test_accur)\n",
         "\n"
       ],
-      "execution_count": 93,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "error",
-          "ename": "NameError",
+          "ename": "AttributeError",
           "evalue": "ignored",
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-93-5a79aa52aa73>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     36\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     37\u001b[0m   \u001b[0mrunning_average\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 38\u001b[0;31m   \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlabel\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32min\u001b[0m \u001b[0menumerate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtraining_dataset\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     39\u001b[0m     \u001b[0mtraining_loss\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtest_step\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0minput\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlabel\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mloss\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0moptimizer\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     40\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mNameError\u001b[0m: name 'training_dataset' is not defined"
+            "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-16-82dac1d5b5ea>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     37\u001b[0m   \u001b[0mrunning_average\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     38\u001b[0m   \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlabel\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32min\u001b[0m \u001b[0menumerate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtraining_data\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 39\u001b[0;31m     \u001b[0mtraining_loss\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtrain_step\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0minput\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlabel\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mloss\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0moptimizer\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     40\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     41\u001b[0m     \u001b[0;31m#record how the loss evolves over one epoch\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<ipython-input-14-067ea8707b24>\u001b[0m in \u001b[0;36mtrain_step\u001b[0;34m(model, input, target, loss_function, optimizer)\u001b[0m\n\u001b[1;32m     10\u001b[0m     \u001b[0;31m#now we need the partial deriatives of the loss with respect to all the weights\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m     \u001b[0;31m#this is where gradienttape comes in handy and allows for easy computation of all the partial derivatives\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 12\u001b[0;31m     \u001b[0mgradients\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtape\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgradient\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mloss\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtraining_variables\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     13\u001b[0m   \u001b[0;31m#last we apply the computed weight updates\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m   \u001b[0moptimizer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mapply_gradients\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mzip\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mgradients\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtrainable_variables\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mAttributeError\u001b[0m: 'Model' object has no attribute 'training_variables'"
           ]
         }
       ]
