running, but problems with accuracy

--- a/hw3_Genome_Classification.ipynb
+++ b/hw3_Genome_Classification.ipynb
@@ -25,7 +25,7 @@
         "import tensorflow as tf\n",
         "import tensorflow_datasets as tfds"
       ],
-      "execution_count": 25,
+      "execution_count": 50,
       "outputs": []
     },
     {
@@ -57,7 +57,7 @@
         "  onehot = tf.reshape(onehot, (-1,)) #e.g. [0001]\n",
         "  return onehot"
       ],
-      "execution_count": 26,
+      "execution_count": 51,
       "outputs": []
     },
     {
@@ -77,7 +77,7 @@
       "source": [
         "test_data, training_data = tfds.load('genomics_ood', as_supervised = True, split = ['test[0:1000]', 'train[0:100000]'])\n"
       ],
-      "execution_count": 27,
+      "execution_count": 52,
       "outputs": []
     },
     {
@@ -86,18 +86,25 @@
         "id": "e8GheLh9KoI-"
       },
       "source": [
-        "\n",
+        "#Pipeline \n",
+        "#First transform the string.tensors and numbers to one_hot_encodings\n",
+        "# i.e. the sequence \"ATG\" will be translated to a sequence of vectors similar to [0001][0010][0100]\n",
         "training_data = training_data.map(lambda seq, label: (string_to_one_hot(seq), tf.one_hot(label, 10)))\n",
+        "\n",
+        "#batch the data into smaller processable chunks\n",
         "training_data = training_data.batch(128)\n",
+        "#shuffle the data\n",
         "training_data = training_data.shuffle(buffer_size=128)\n",
+        "#always prepare some data while working on the last set (better performance)\n",
         "training_data = training_data.prefetch(20)\n",
         "\n",
+        "#repeat the same processing steps for the test data\n",
         "test_data = test_data.map(lambda seq, label: (string_to_one_hot(seq), tf.one_hot(label, 10)))\n",
         "test_data = test_data.batch(128)\n",
         "test_data = test_data.shuffle(buffer_size=128)\n",
         "test_data = test_data.prefetch(20)\n"
       ],
-      "execution_count": 28,
+      "execution_count": 53,
       "outputs": []
     },
     {
@@ -121,7 +128,8 @@
         "class Model(Model):\n",
         "  def __init__(self):\n",
         "    super(Model,self).__init__()\n",
-        "\n",
+        "    # create the hidden layers'\n",
+        "    \n",
         "    self.hidden_layer_1 = tf.keras.layers.Dense(units=256, activation=tf.keras.activations.sigmoid)\n",
         "    self.hidden_layer_2 = tf.keras.layers.Dense(units=256, activation=tf.keras.activations.sigmoid)\n",
         "    self.output_layer = tf.keras.layers.Dense(units=10, activation = tf.keras.activations.softmax)\n",
@@ -132,7 +140,7 @@
         "    input = self.output_layer(input)\n",
         "    return input"
       ],
-      "execution_count": 29,
+      "execution_count": 54,
       "outputs": []
     },
     {
@@ -159,6 +167,8 @@
         "    prediction = model(input)\n",
         "    #compute the loss given the prediction and the target\n",
         "    loss = loss_function(prediction, target)\n",
+        "    accuracy = np.argmax(target, axis=1) == np.argmax(prediction, axis=1)\n",
+        "\n",
         "    #now we need the partial deriatives of the loss with respect to all the weights\n",
         "    #this is where gradienttape comes in handy and allows for easy computation of all the partial derivatives\n",
         "    gradients = tape.gradient(loss, model.trainable_variables)\n",
@@ -166,9 +176,9 @@
         "  optimizer.apply_gradients(zip(gradients,model.trainable_variables))\n",
         "\n",
         "  #to be able to take record of the error produced by our network we return the loss\n",
-        "  return loss"
+        "  return loss, np.mean(accuracy)"
       ],
-      "execution_count": 30,
+      "execution_count": 55,
       "outputs": []
     },
     {
@@ -196,7 +206,6 @@
         "\n",
         "    computed_loss = loss_function(prediction, target)\n",
         "    sample_test_accuracy =  np.argmax(target, axis=1) == np.argmax(prediction, axis=1)\n",
-        "    sample_test_accuracy = np.mean(sample_test_accuracy)\n",
         "    test_losses.append(computed_loss.numpy())\n",
         "    test_accuracies.append(np.mean(sample_test_accuracy))\n",
         "\n",
@@ -205,7 +214,7 @@
         "  test_accuracy = np.mean(test_accuracies)\n",
         "  return test_loss, test_accuracy\n"
       ],
-      "execution_count": 31,
+      "execution_count": 56,
       "outputs": []
     },
     {
@@ -223,7 +232,7 @@
         "id": "XqBYybUyuO5-"
       },
       "source": [
-        "tf.keras.backend.clear_session()\n",
+        "#tf.keras.backend.clear_session()\n",
         "\n",
         "#Initialize model\n",
         "model = Model()\n",
@@ -240,16 +249,18 @@
         "#To keep track of the processes, we use several lists\n",
         "training_steps = []\n",
         "train_losses= []\n",
+        "train_accuracies = []\n",
         "\n",
         "test_losses = []\n",
         "test_accuracies = []\n",
         "\n",
         "#test once before training the model\n",
-        "test_loss, test_accuracy = test(model, training_data, loss)\n",
+        "test_loss, test_accuracy = test(model, test_data, loss)\n",
         "\n",
         "#how does the model do on training data before training?\n",
-        "train_loss = test(model, training_data, loss)\n",
+        "train_loss, train_accuracy = test(model, training_data, loss)\n",
         "train_losses.append(train_loss)\n",
+        "train_accuracies.append(train_accuracy)\n",
         "\n",
         "#now start to train\n",
         "for epoch in range(epochs):\n",
@@ -260,13 +271,16 @@
         "  test_data = test_data.shuffle(buffer_size=128)\n",
         "\n",
         "  running_average = 0\n",
-        "  for i,(input, label) in enumerate(training_data):\n",
-        "    training_loss = train_step(model, input, label, loss, optimizer)\n",
+        "  training_accuracy_average = 0\n",
         "\n",
+        "  for i,(input, label) in enumerate(training_data):\n",
+        "    training_loss, training_accuracy = train_step(model, input, label, loss, optimizer)\n",
+        "    training_accuracy_average = running_average_factor * training_accuracy + (1- running_average_factor) * training_accuracy\n",
         "    #record how the loss evolves over one epoch\n",
         "    running_average = running_average_factor * running_average  + (1 - running_average_factor) * training_loss \n",
         "\n",
         "  train_losses.append(running_average)\n",
+        "  train_accuracies.append(training_accuracy_average)\n",
         "\n",
         "  #now evaluate the model performance on test set\n",
         "  test_loss, test_accur = test(model, test_data, loss)\n",
@@ -293,6 +307,8 @@
         "id": "R-ix7rpT1_Mm"
       },
       "source": [
+        "import matplotlib.pyplot as plt\n",
+        "\n",
         "#do the visualization\n",
         "#test loss and training loss\n",
         "plt.figure()\n",
@@ -312,11 +328,13 @@
         "id": "FijhoZxRsEfV"
       },
       "source": [
-        "#test accuracy\n",
+        "#test accuracy and training accuracy\n",
         "plt.figure()\n",
-        "plt.plot(test_accuracies)\n",
+        "#line1, = plt.plot(train_accuracies)\n",
+        "line2, = plt.plot(test_accuracies)\n",
         "plt.xlabel(\"Training steps\")\n",
-        "plt.ylabel(\"Test accuracy\")\n",
+        "plt.ylabel(\"Test/Training accuracy\")\n",
+        "plt.legend((line1,line2),(\"training\",\"test\"))\n",
         "plt.show()\n"
       ],
       "execution_count": null,
